# PdfExtractor

./: .gitignore  CMakeLists.txt  GEMINI.md  Makefile  PdfExtractor.desktop  README.md  errorcodes.h  main.cpp  main.moc  moc_pdfextractiondialog.cpp  pdfextractiondialog.cpp  pdfextractiondialog.h  project.pro  resources.qrc  settingsdialog.cpp  settingsdialog.h
backup/: PdfExtractor  PdfExtractor1  PdfExtractor2
